<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/backside">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/title_gap">
        <com.example.umamaheshwari.mygooglemaps.Htext
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_welcome"
            android:gravity="center_horizontal"
            android:textSize="@dimen/tv_welcome"
            android:textColor="@color/title_color"
            style="@style/title_gap"/>
        <com.example.umamaheshwari.mygooglemaps.Htext
            android:id="@+id/tv_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_to"
            android:gravity="center_horizontal"
            android:textSize="@dimen/tv_welcome"
            android:textColor="@color/title_color"
            style="@style/title_gap"/>
        <com.example.umamaheshwari.mygooglemaps.Htext
            android:id="@+id/tv_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_google"
            android:gravity="center_horizontal"
            android:textSize="@dimen/tv_welcome"
            android:textColor="@color/title_color"
            style="@style/title_gap"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.example.umamaheshwari.mygooglemaps.Htext
                android:id="@+id/tv_subquote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_subquote"
                android:gravity="right"
                android:textSize="@dimen/tv_subquote"
                android:layout_alignParentRight="true"
                android:textColor="@color/title_color"
                style="@style/subquote_title_gap"/>
        </RelativeLayout>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_alignParentBottom="true">
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:background="@drawable/fbbuttonflat"
        style="@style/fb_login_style"/>
    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_below="@id/login_button"
        style="@style/google_signin_style" />
    <TextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:gravity="center"
        android:textColor="#ffffff"/>
    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:textColor="#aa48e3"/>
</LinearLayout>

</RelativeLayout>