<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/googlemaps"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@android:color/white">

        <RelativeLayout
            android:id="@+id/categories_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <RelativeLayout
                android:id="@+id/nav_header_container"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:background="@color/profile_bg"
                android:gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/login_user_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"

                        android:src="@drawable/profe_ic" />

            </RelativeLayout>


            <android.support.v4.widget.NestedScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nav_header_container">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical">




                        <LinearLayout
                            android:id="@+id/ll_profile"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            style="@style/llv_profile_style">
                            <ImageView
                                android:src="@drawable/profile"
                                style="@style/image_profile_style"/>
                            <TextView
                                android:id="@+id/tv_profile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:layout_centerVertical="true"
                                android:text="@string/tv_profile"
                                style="@style/tv_list_item_pstyles"/>
                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            style="@style/view_style"
                            android:background="@color/heading"/>
                        <LinearLayout
                            android:id="@+id/ll_contacts"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            style="@style/llv_contacts_style">
                            <ImageView
                                android:src="@drawable/contacts"
                                style="@style/image_contacts_style"/>
                            <TextView
                                android:id="@+id/tv_contacts"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:layout_centerVertical="true"
                                android:text="@string/tv_contacts"
                                style="@style/tv_list_item_styles"/>
                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            style="@style/view_style"
                            android:background="@color/heading" />
                        <LinearLayout
                            android:id="@+id/ll_location_history"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            style="@style/llv_profile_style"
                            >
                            <ImageView
                                android:src="@drawable/history_location"
                                style="@style/location_history"/>
                            <TextView
                                android:id="@+id/tv_history"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:layout_centerVertical="true"
                                android:text="@string/tv_history"
                                style="@style/tv_list_item_hstyles"
                                />
                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            style="@style/view_style"
                            android:background="@color/heading"
                            />
                        <LinearLayout
                            android:id="@+id/ll_messages"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            style="@style/llv_profile_style">
                            <ImageView
                                android:src="@drawable/messages"
                                style="@style/messages"/>
                            <TextView
                                android:id="@+id/tv_messages"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="@string/tv_messages"
                                style="@style/messages_styles"
                                />
                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            style="@style/view_style"
                            android:background="@color/heading"
                            />
                        <LinearLayout
                            android:id="@+id/ll_logout"
                            android:layout_width="match_parent"
                            style="@style/llv_profile_style">
                            <ImageView
                                android:gravity="center_horizontal"
                                android:src="@drawable/loggedouts"
                                style="@style/logout_image_style"/>
                            <TextView
                                android:id="@+id/tv_logout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_logout"
                                style="@style/tv_list_item_logstyles"
                                android:textAlignment="center" />
                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            style="@style/view_style"
                            android:background="@color/heading"
                            />
                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>
        </RelativeLayout>



    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
